--- a/templates/extract/document_list.html
+++ b/templates/extract/document_list.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="modal-footer">
                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
-                            <input type="submit" class="btn btn-success" value="Add" />
+                            <input type="submit" class="btn btn-success" value="Upload" />
 
                         </div>
                     </form>
